<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apartamentList"
            android:icon="@drawable/ic_apartment"
            android:title="@string/menu_apartamentList" />
        <item
            android:id="@+id/nav_registrationApartament"
            android:icon="@drawable/ic_registration"
            android:title="@string/menu_registration" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
    </group>
</menu>