<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_apartamentList">

    <fragment
        android:id="@+id/nav_apartamentList"
        android:name="com.henriqueapps.administraoDeApartamentos.ui.apartamentList.ApartamentListFragment"
        android:label="@string/menu_apartamentList"
        tools:layout="@layout/fragment_apartament_list" />

    <activity
        android:id="@+id/nav_registrationApartament"
        android:name="com.henriqueapps.administraoDeApartamentos.ui.registrationApartament.RegistrationApartament"
        android:label="@string/menu_registration"
        tools:layout="@layout/activity_registration_apartament" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.henriqueapps.administraoDeApartamentos.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.henriqueapps.administraoDeApartamentos.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>