<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registrationApartament.RegistrationApartament">

        <TextView
            android:id="@+id/txt_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apartament_information"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="110dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/txt_information"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/editCep"
                android:hint="@string/hint_cep"
                android:inputType="number"
                app:mask="_____-___"
                app:maskCharacter="_"
                app:maskStyle="completable"
                style="@style/EditText_Form"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/text_search"
            android:text="@string/button_search"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_button_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textInputLayoutCep"
            app:layout_constraintTop_toBottomOf="@id/txt_information"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCep"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLogradouro"
                android:hint="@string/hint_logradouro"
                android:inputType="text"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutLogradouro"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNumber"
                android:hint="@string/hint_number"
                android:inputType="number"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutNumber"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDistrict"
                android:hint="@string/hint_district"
                android:inputType="text"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDistrict"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCity"
                android:hint="@string/hint_city"
                android:inputType="text"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCity"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editState"
                android:inputType="text"
                android:hint="@string/hint_state"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEnergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutState"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEnergy"
                android:inputType="number"
                android:hint="@string/hint_energy"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEnergy"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editWater"
                android:inputType="number"
                android:hint="@string/hint_water"
                style="@style/EditText_Form"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/dark_cyan_green"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutWater"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.marcoscg.currencyedittext.CurrencyEditText
                android:id="@+id/editPrice"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditText_Form"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continued"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cont"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_button_entrar"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPrice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>