<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pages.EditApartament">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background_view_notifi"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_notifi"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toTopOf="@id/view_top"
            app:layout_constraintLeft_toLeftOf="@id/view_top"
            app:layout_constraintBottom_toBottomOf="@id/view_top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_edit_apartament"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_top"
            app:layout_constraintBottom_toBottomOf="@id/view_top"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_number"
            android:padding="10dp"
            android:visibility="gone"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_energy"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_number"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_water"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_energy"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_value"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_water"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:padding="10dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_value"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>