<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_cyan_green"
        tools:context=".pages.ForgotPassword">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background_view_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toTopOf="@id/view_top"
            app:layout_constraintLeft_toLeftOf="@id/view_top"
            app:layout_constraintBottom_toBottomOf="@id/view_top"
            />

        <TextView
            android:id="@+id/title_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/recovery_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_instructions"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/title_forgot_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingClass" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:boxStrokeColor="@color/lightblue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/recovery_instructions"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_medium"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                android:drawableRight="@drawable/ic_email"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_recovery"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="15dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button_entrar"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/background_view_bottom"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>